--- a/PAT-B/B-1011/B1011.vcxproj
+++ b/PAT-B/B-1011/B1011.vcxproj
@@ -20,10 +20,11 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{44B9E729-8E27-4D58-951E-0C1EE8DE30ED}</ProjectGuid>
+    <ProjectGuid>{803BC769-D021-4D4C-9D2A-05A5DEB98AD3}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>B1009</RootNamespace>
+    <RootNamespace>B1011</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <ProjectName>B-1011</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
