--- a/PAT-A/A-1009/A-1009.vcxproj
+++ b/PAT-A/A-1009/A-1009.vcxproj
@@ -20,11 +20,10 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{BB0AD2CF-35B5-43A7-A3D2-26B0C1BC8D7B}</ProjectGuid>
+    <ProjectGuid>{E133C5E8-4E09-4704-A5DE-7E09487343B3}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>My1001ABFormat</RootNamespace>
+    <RootNamespace>A1009</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
-    <ProjectName>A-1001</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
