--- a/PAT-A/A-1013/A-1013.vcxproj
+++ b/PAT-A/A-1013/A-1013.vcxproj
@@ -20,11 +20,10 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{BB0AD2CF-35B5-43A7-A3D2-26B0C1BC8D7B}</ProjectGuid>
+    <ProjectGuid>{E8C8801B-36AF-4929-8665-96C25E0C5A4F}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>My1001ABFormat</RootNamespace>
+    <RootNamespace>A1013</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
-    <ProjectName>A-1001</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
